--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.7.4.post0
 alpha-vantage==2.3.1
 async-timeout==3.0.1
 attrs==21.2.0
+backcall==0.2.0
 Brotli==1.0.9
 certifi==2021.5.30
 chardet==4.0.0
