--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ ta==0.7.0
 typing-extensions==3.10.0.0
 urllib3==1.26.5
 Werkzeug==2.0.1
+xlrd==2.0.1
 yarl==1.6.3
 cmdstanpy==0.9.68
 ujson==4.0.2
